Minor readability fixes (2)

--- a/src/components/CustomMember/CustomMember_0/CustomMember_0.scss
+++ b/src/components/CustomMember/CustomMember_0/CustomMember_0.scss
@@ -108,7 +108,7 @@
   }
   & .MemberPage__description {
     font-weight: 700;
-    text-shadow: 1px 1px 2px $main-white;
+    text-shadow: 1px 1px 2px $main-silver;
   }
 }
 
